# LVC-tools

./: .gitignore  CMakeLists.txt  README.md  autogen.sh
demos/: CMakeLists.txt
demos/serial/: CMakeLists.txt  demo_send_file_through_serial_port.cpp  demo_serial.cpp
demos/sockets/: CMakeLists.txt  demo_socket_client.cpp  demo_socket_server.cpp
external_src/: CMakeLists.txt  CMakeLists.txt~
external_src/serial_rs-232/: CMakeLists.txt  CMakeLists.txt~  doc.txt  rs232.c  rs232.h
private/julio/: CMakeLists.txt  serial.cpp
private/julio/qt/dead_reckoning_real_time_plot/: dead_reckoning_real_time_plot.pro  mainwindow.h
sockets/: ac_socket.h  cc_socket_server.cpp  cc_socket_server.cpp~  cc_socket_server.h  cc_socket_server.h~  cc_tcp_socket_client.cpp  cc_udp_socket_client.cpp  communications.ini
src/: CMakeLists.txt
src/general/: definitions.h
src/serial/: CCCommunicationSerial.cpp  CCCommunicationSerial.h  CMakeLists.txt  CMakeLists.txt~  cc_serial.cpp  cc_serial.cpp~  cc_serial.h  cc_serial.h~
src/sockets/: CMakeLists.txt  ac_socket.cpp  ac_socket.cpp~  ac_socket.h  ac_socket.h~  cc_socket_server.cpp  cc_socket_server.h  cc_tcp_socket_client.cpp  cc_tcp_socket_client.h  cc_udp_socket_client.h
